--- a/MUP-RR/MUP-RR/MUP-RR.csproj
+++ b/MUP-RR/MUP-RR/MUP-RR.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>MUP_RR</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
