--- a/MUP-RR/.gitignore
+++ b/MUP-RR/.gitignore
@@ -539,4 +539,6 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,aspnetcore,csharp,dotnetcore
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
+*.dll
+*.pdb
+*.cache
