--- a/r2ua/ios/Flutter/Generated.xcconfig
+++ b/r2ua/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\src\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\pedro\Desktop\FlutterApp\r2ua
+FLUTTER_ROOT=C:\Users\Admin\Documents\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Admin\Desktop\PI_G5\r2ua
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
