--- a/r2ua/android/local.properties
+++ b/r2ua/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Admin\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\Admin\\Documents\\flutter
+sdk.dir=C:\\Users\\pedro\\AppData\\Local\\Android\\sdk
+flutter.sdk=E:\\Coding\\Flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
