--- a/r2ua/pubspec.yaml
+++ b/r2ua/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   font_awesome_flutter: 8.10.1
   http: ^0.13.3
   flutter_bloc: ^6.1.1
+  sprintf: "^4.0.0"
 
 dev_dependencies:
   flutter_test:
