--- a/r2ua/pubspec.yaml
+++ b/r2ua/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+ 
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,11 +35,13 @@ dependencies:
   flutter_bloc: ^6.1.1
   sprintf: "^4.0.0"
   intl: ^0.16.1
-
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
+  geolocator: ^5.1.5
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-
+      hive_generator: ^1.1.0
+  build_runner: ^2.0.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
