--- a/r2ua/ios/Flutter/Generated.xcconfig
+++ b/r2ua/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,13 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=E:\Coding\Flutter
-FLUTTER_APPLICATION_PATH=D:\Github\PI_G5\r2ua
+FLUTTER_ROOT=C:\src\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Alex\Desktop\PI_G5-96e614c54d3a26ce4e7de3b1551de2bd454e0002\r2ua
+COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+EXCLUDED_ARCHS[sdk=iphonesimulator*]=arm64 i386
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=false
 TREE_SHAKE_ICONS=false
