--- a/r2ua/pubspec.yaml
+++ b/r2ua/pubspec.yaml
@@ -18,31 +18,42 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.7.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
- 
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+
   font_awesome_flutter: 8.10.1
-  http: ^0.13.3
+
+  location: ^3.1.0
+  geolocator: ^5.3.0
+  permission_handler: ^4.4.0+hotfix.2
+  http: ^0.12.1
+
+  path: ^1.7.0
+  image_picker: ^0.6.7+17
+  fluttertoast: ^3.1.0
+  flutter_local_notifications: ^3.0.3
   flutter_bloc: ^6.1.1
-  sprintf: "^4.0.0"
-  intl: ^0.16.1
-  hive: ^2.0.4
-  hive_flutter: ^1.0.0
-  geolocator: ^5.1.5
+  hive: ^1.4.4+1
+  sprintf: ^5.0.0
+  intl: ^0.15.7
+
 dev_dependencies:
   flutter_test:
-      hive_generator: ^1.1.0
-  build_runner: ^2.0.4
-# For information on the generic Dart part of this file, see the
+    sdk: flutter
+  hive_generator: ^0.5.0
+  build_runner: ^1.10.3
+
+dependency_overrides:
+  analyzer: '1.7.1'
+  
+  # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
