--- a/r2ua/ios/Flutter/Generated.xcconfig
+++ b/r2ua/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=E:\Coding\Flutter
-FLUTTER_APPLICATION_PATH=D:\Github\PI_G5\r2ua
+FLUTTER_ROOT=C:\Users\Admin\Documents\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\Admin\Desktop\PI_G5\r2ua
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
