--- a/r2ua/pubspec.yaml
+++ b/r2ua/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   sprintf: ^5.0.0
   intl: ^0.15.7
   path_provider: ^2.0.2
-
+  shared_preferences: ^2.0.6
+  flutter_phoenix: ^1.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
