--- a/MUP-RR/MUP-RR/appsettings.Development.json
+++ b/MUP-RR/MUP-RR/appsettings.Development.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Environment": "development",
+  "ConnectionStrings": {
+    "muprrDBConnection": "Server=sql-dev.ua.pt;Database=muprr-dev;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
