Correct layout name

--- a/MUP-RR/MUP-RR/appsettings.json
+++ b/MUP-RR/MUP-RR/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "Auth": {
     "LogoutPath": "/secure/Shibboleth.sso/Logout"
+  },
+  "Environment": "development",
+  "ConnectionStrings": {
+    "muprrDBConnection": "Server=sql-dev.ua.pt;Database=muprr-dev;Trusted_Connection=True;MultipleActiveResultSets=True;"
   }
 }
